<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_weather"
    tools:context=".Fragments.WeatherFragment">

    <TextView
        android:id="@+id/tv_temp_hc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
